radar chart updated

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,3 +7,16 @@ html,
 body {
 	@apply h-full overflow-hidden;
 }
+
+
+.btn {
+    @apply bg-primary-500 text-on-primary-token;
+}
+
+.input {
+	@apply bg-white;
+}
+
+.input[type="range"]{
+	@apply accent-primary-500;
+}
